Bug 371864: Background images don't load until scrolled into the viewport. r+sr=roc.